# ClassicAPI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  compile_flags.txt
.github/workflows/: build.yml  release.yml
AddOns/!!!ClassicAPI/: !!!ClassicAPI.toc  Compat.lua
AddOns/!!!ClassicAPI/Util/: AddOnCompat.lua  CacheUtil.lua  CallbackRegistry.lua  Color.lua  ColorUtil.lua  Constants.lua  EventUtil.lua  FormattingUtil.lua  FrameUtil.lua  FunctionUtil.lua  GameTooltip.lua  GlobalCallbackRegistry.lua  IconDataProvider.lua  ItemUtil.lua  LinkUtil.lua  MathUtil.lua  Mixin.lua  PixelUtil.lua  PlayerUtil.lua  (+9 more)
AddOns/AoELootTest/: AoELootTest.lua  AoELootTest.toc
AddOns/DebugTools/: DebugTools.lua  DebugTools.toc  DebugTools.xml  Dump.lua  TableInspector.lua
DebugTools/: Compat.lua  DebugTools.lua  DebugTools.toc  Dump.lua
cmake/: embed_addon.cmake  embed_file.cmake  version.rc.in
docs/: API.md  BlizzardScriptAPI.md  DBCs.md  Events.md  LuaCAPI.md  MPQBuilding.md  SessionGlobals.md  TurtleScriptAPI.md  raw_globals.txt  raw_lua_funcs.txt  raw_methods.txt  raw_wotlk_globals.txt
src/: Common.cpp  Common.h  DllMain.cpp  Game.cpp  Game.h  HookSecureFunc.cpp  Offsets.h  QuestLog.cpp  QuestLog.h  SpellInfo.cpp  SpellInfo.h  SpellTooltip.cpp  SpellTooltip.h
src/action/: Info.cpp
src/addons/: Embedded.cpp  Info.cpp
src/api/: Version.cpp
src/auctionhouse/: PostItem.cpp
src/aura/: Api.cpp  ComboDuration.cpp  ComboDuration.h  Data.cpp  Data.h  Source.cpp  Source.h
src/bag/: UpdateDelayed.cpp  UpdateDelayed.h
src/baselib/: MathLib.cpp  Select.cpp  StringLib.cpp
src/bindings/: Bindings.xml  Inject.cpp  Inject.h
src/cache/: QueryLoad.cpp  QueryLoad.h
src/charlist/: Cache.cpp  Order.cpp
src/chat/: CurrentGUID.cpp  CurrentGUID.h
src/chatbubble/: Info.cpp
src/classes/: Info.cpp
src/container/: Charges.cpp  Cooldown.cpp  Durability.cpp  FreeSlots.cpp  HasItem.cpp  Hearthstone.cpp  ID.cpp  ItemInfo.cpp  MoveItem.cpp  Openable.cpp  RepairCost.cpp  SwapItems.cpp
src/coroutine/: Library.cpp
src/creature/: Info.cpp
src/cursor/: Info.cpp  Info.h
src/cvar/: Bool.cpp  Factory.cpp  Factory.h  Glue.cpp
src/dbc/: Lookup.cpp  Lookup.h
src/debug/: Log.cpp  Log.h  Probe.cpp  TooltipProbe.cpp
src/encoding/: Base64.cpp  CBOR.cpp  Compress.cpp  Hex.cpp  JSON.cpp
src/equipmentset/: Api.cpp  Data.cpp  Data.h  LocationConstants.cpp  Locations.cpp  Locations.h  Set.h  Storage.cpp  Storage.h  Tooltip.cpp
src/event/: Custom.cpp  Custom.h  EnteringWorld.cpp  Registered.cpp  SignalHook.cpp  SignalHook.h  Util.cpp  Util.h
src/expansion/: Constants.cpp  Level.cpp  Level.h
src/faction/: Info.cpp  StandingChanged.cpp  StandingChanged.h  UnitFactionPolyfill.cpp
src/frame/: Modern.cpp
src/friendlist/: Who.cpp
src/gameobject/: ClosestPosition.cpp  Info.cpp  Tooltip.cpp
src/gossip/: Info.cpp
src/group/: Info.cpp
src/guid/: CreatureInfo.cpp  Guid.cpp  Guid.h  PlayerInfo.cpp
src/input/: GlobalMouse.cpp  Modifier.cpp
src/instance/: Info.cpp
src/interface/: Export.cpp
src/item/: Arg.cpp  Arg.h  AverageLevel.cpp  Bag.cpp  BagFamily.cpp  BagFamily.h  BankProbe.cpp  Bound.cpp  Bound.h  Charges.cpp  Charges.h  Consumable.cpp  Cooldown.cpp  Cooldown.h  Count.cpp  Count.h  Cursor.cpp  Cursor.h  Data.cpp  Data.h  Durability.cpp  Durability.h  EnchantInfo.cpp  Equipment.cpp  Exists.cpp  GUID.cpp  GetData.cpp  GetItemLocation.cpp  Hearthstone.cpp  ID.cpp  ID.h  InRange.cpp  Info.cpp  Info.h  InventoryID.cpp  InventoryItemsForSlot.cpp  InventoryType.cpp  Level.cpp  Link.cpp  Link.h  (+34 more)
src/loot/: History.cpp  Nearby.cpp  Scan.cpp  Unit.cpp  UnitItem.cpp
src/lossofcontrol/: Info.cpp
src/macro/: Icons.cpp  Spell.cpp
src/mail/: InboxItemLink.cpp  SendMailItemLink.cpp
src/map/: Area.cpp  Area.h  AreaTriggers.cpp  Areas.cpp  Info.cpp  MapExploration.cpp  Overlays.cpp  Overlays.h  WorldSize.cpp
src/merchant/: Frame.cpp
src/nameplate/: Events.cpp  Info.cpp  TokenResolver.cpp  Walk.h
src/net/: PacketReader.h
src/object/: ClosestByEntry.cpp  ClosestByEntry.h
src/player/: CanUseItem.cpp  Equipment.cpp  Facing.cpp  HearthstoneBound.cpp  Info.cpp  InputEvents.cpp  LocationInfo.cpp  LoginStatus.cpp  MouseLook.cpp  Movement.cpp  NameCache.cpp  NameCache.h  StatSignal.cpp  StatSignal.h
src/quest/: Accepted.cpp  Cache.cpp  Cache.h  Data.cpp  Details.cpp  LeaderBoard.cpp  Log.cpp  Log.h  LogEvents.cpp  Title.cpp  TurnedIn.cpp
src/screen/: Info.cpp
src/script/: Run.cpp
src/security/: Account.cpp  CredStore.cpp  CredStore.h  FrameXMLBypass.cpp
src/settings/: Account.cpp  Account.h
src/spell/: Arg.cpp  Arg.h  AtCursor.cpp  AtCursor.h  AtUnit.cpp  AutoAttack.cpp  AutoRepeat.cpp  BonusDamage.cpp  Cancel.cpp  Cast.cpp  CastByID.cpp  CastNoToggle.cpp  Cooldown.cpp  Description.cpp  Exists.cpp  HasRange.cpp  HealingAura.cpp  HealingAura.h  InRange.cpp  Info.cpp  Info.h  IsCurrent.cpp  IsSelfBuff.cpp  Level.cpp  Lookup.cpp  Lookup.h  MacroPrimarySpell.cpp  MacroPrimarySpell.h  Mechanic.cpp  Mod.cpp  Mod.h  PowerCost.cpp  Radius.cpp  Range.cpp  Range.h  Reagents.cpp  School.cpp  SchoolString.cpp  SkillLine.cpp  Subtext.cpp  (+3 more)
src/table/: Wipe.cpp
src/talent/: Info.cpp  Tooltip.cpp
src/taxi/: Map.cpp  Paths.cpp
src/tick/: WorldTick.cpp  WorldTick.h
src/time/: DateAndTime.cpp  Server.cpp  Server.h  Timer.cpp
src/tooltip/: ClearItemGuid.cpp  CompareItem.cpp  LinePool.cpp  Owner.cpp  SetItemEvent.cpp  SetItemEvent.h
src/totem/: Tracker.cpp  Tracker.h
src/tradeskill/: Link.cpp
src/turtle/: BagFamily.cpp  ComboDuration.cpp  Detect.cpp  Detect.h  HealingAura.cpp
src/ui/: Color.cpp  ColorData.h  FrameObject.cpp  FrameObject.h
src/unit/: ClassBase.cpp  ClosestPosition.cpp  Combat.cpp  CreatureFamily.cpp  CreatureType.cpp  Flags.cpp  Flags.h  Focus.cpp  Focus.h  Identity.cpp  Identity.h  LineOfSight.cpp  MirrorTimer.cpp  Pet.cpp  Position.h  Power.cpp  Power.h  RaceBase.cpp  Range.cpp  ShapeshiftForm.cpp  Speed.cpp  StandState.cpp  Stat.cpp  State.cpp  SubName.cpp  TokenExtensions.cpp  Tooltip.cpp
src/voicechat/: Tts.cpp
src/xml/: Templates.cpp
(+22 files in other folders)
